<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#403f3f">

    <Switch
        android:id="@+id/clinicalStatusToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/seen_by_doctor"
        android:textColor="#D3D3D3"
        android:textColorHint="#D3D3D3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/verificationStatusSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/has_been_diagnosed"
        android:textColor="#D3D3D3"
        android:textColorHint="#D3D3D3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clinicalStatusToggle" />

    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="325dp"
        android:layout_height="32dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verificationStatusSwitch" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="276dp"
        android:layout_height="174dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categorySpinner">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/severity_level"
            android:textColor="#D3D3D3"
            android:textColorHint="#D3D3D3"
            android:textSize="18dp" />

        <RadioButton
            android:id="@+id/severityLowButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSeverityButtonClicked"
            android:text="@string/low"
            android:textColor="#D3D3D3"
            android:textColorHint="#D3D3D3" />

        <RadioButton
            android:id="@+id/severityMediumButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSeverityButtonClicked"
            android:text="@string/medium"
            android:textColor="#D3D3D3"
            android:textColorHint="#D3D3D3" />

        <RadioButton
            android:id="@+id/severityHighButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSeverityButtonClicked"
            android:text="@string/high"
            android:textColor="#D3D3D3"
            android:textColorHint="#D3D3D3" />

    </RadioGroup>

    <EditText
        android:id="@+id/bodySiteField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/problem_location"
        android:inputType="textPersonName"
        android:textColor="#D3D3D3"
        android:textColorHint="#D3D3D3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/medicalNotesField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/medical_notes"
        android:inputType="textPersonName"
        android:textColor="#D3D3D3"
        android:textColorHint="#D3D3D3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bodySiteField" />

    <CheckBox
        android:id="@+id/encounterCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/has_encountered"
        android:textColor="#D3D3D3"
        android:textColorHint="#D3D3D3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medicalNotesField" />

    <Button
        android:id="@+id/RegisterConditionRegisterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="#D3D3D3"
        app:backgroundTint="#427A5B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/encounterCheckBox" />

</androidx.constraintlayout.widget.ConstraintLayout>