<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#403f3f">

    <Button
        android:id="@+id/recordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginBottom="28dp"
        android:text="@string/record"
        android:textColor="#D3D3D3"
        app:backgroundTint="#427A5B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/bloodTypeSpinner"
        android:layout_width="339dp"
        android:layout_height="48dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/recordButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anamnesis_recorder"
        android:textColor="#D3D3D3"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/nameField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.093" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:layout_marginBottom="44dp"
        android:text="@string/has_allergies"
        android:textColor="#D3D3D3"
        android:textColorHint="#D3D3D3"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/rdGroup"
        android:layout_width="214dp"
        android:layout_height="84dp"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/bloodTypeSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/maleButton"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/male"
            android:textColor="#D3D3D3"
            android:textColorHint="#D3D3D3"
            app:layout_constraintEnd_toStartOf="@+id/femaleButton"
            app:layout_constraintHorizontal_bias="0.617"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ageField" />

        <RadioButton
            android:id="@+id/femaleButton"
            android:layout_width="97dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="100dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/female"
            android:textColor="#D3D3D3"
            android:textColorHint="#D3D3D3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ageField" />
    </RadioGroup>

    <Switch
        android:id="@+id/medicineSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toTopOf="@+id/rdGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.403"
        app:layout_constraintStart_toEndOf="@+id/textView3" />

    <Switch
        android:id="@+id/allergiesSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/medicineSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.429"
        app:layout_constraintStart_toEndOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginBottom="36dp"
        android:text="@string/takes_medicine"
        android:textColor="#D3D3D3"
        android:textColorHint="#D3D3D3"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/rdGroup"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/weightField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/weight"
        android:inputType="number"
        android:textColor="#D3D3D3"
        android:textColorHint="#D3D3D3"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/nameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="#D3D3D3"
        android:textColorHint="#D3D3D3"
        app:layout_constraintBottom_toTopOf="@+id/heightField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ageField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"
        android:textColor="#D3D3D3"
        android:textColorHint="#D3D3D3"
        app:layout_constraintBottom_toTopOf="@+id/weightField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/heightField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Height"
        android:inputType="textPersonName"
        android:textColor="#D3D3D3"
        android:textColorHint="#D3D3D3"
        app:layout_constraintBottom_toTopOf="@+id/ageField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/jumpToListed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_patients"
        android:textColor="#403f3f"
        app:backgroundTint="#fcf5b8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.284"
        app:layout_constraintStart_toEndOf="@+id/recordButton"
        app:layout_constraintTop_toBottomOf="@+id/bloodTypeSpinner" />

</androidx.constraintlayout.widget.ConstraintLayout>